# Nozzle-Optimization

./: .gitignore  CMakeLists.txt
include/nozzle/: chamber_conditions.hpp  design_modes.hpp  design_result.hpp  geometry.hpp  isentropic.hpp  moc.hpp
include/numerics/: root_finding.hpp
src/: main.cpp
